# oncall

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml  migration copy.yaml  migration.yaml  migration_tables.json  pyproject.toml  trino-migration.example.yaml  trino-migration.yaml
docker/hive/: start-metastore.sh
docker/hive/conf/: hive-site.xml
docker/localstack/: init-aws.sh
docker/localstack/init/: 01-init-secrets.sh
docker/mysql/init/: 01_create_schema.sql
docker/postgres/init/: 01_airflow_schema.sql
docker/trino/: entrypoint.sh
docker/trino/etc/: config.properties  node.properties
docker/trino/etc/catalog/: hive.properties  mysql.properties
docker/trino/etc/coordinator/: config.properties  config.properties.template  jvm.config
docs/: trino-migration.md
scripts/: migrate_config.example.json  setup_test_env.sh
scripts/migration/: README.md  __init__.py  config.py  migrate.py  migrate_config.example.json
src/airflow_validator/: __init__.py  __main__.py  cli.py  config.py
src/airflow_validator/api/: __init__.py  airflow_client.py
src/airflow_validator/db/: __init__.py  mysql_client.py  postgres_client.py
src/airflow_validator/exporters/: __init__.py  xlsx_exporter.py
src/airflow_validator/services/: __init__.py  config_extractor.py  dag_query.py  failure_checker.py
src/airflow_validator/utils/: logger.py
src/mysql_migration/: README.md  __init__.py  cli.py  config.py  migrator.py
src/trino_migration/: __init__.py  cache.py  cli.py  client.py  config.py  extractor.py  migrator.py  s3_copier.py
(+4 files in other folders)
