[project]
name = "data-migrator"
version = "0.1.0"
description = "데이터 마이그레이션 도구 (MySQL, Trino)"
requires-python = ">=3.9"
dependencies = [
    # MySQL
    "pymysql>=1.1.0",
    "aiomysql>=0.2.0",
    "cryptography>=41.0.0",
    # Trino
    "trino>=0.328.0",
    "boto3>=1.34.0",
    # Common
    "click>=8.1.7",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "rich>=13.7.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.12.0",
]

[project.scripts]
mysql-migrate = "mysql_migration.cli:main"
trino-migrate = "trino_migration.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
